--- a/src/station1.html
+++ b/src/station1.html
@@ -4,7 +4,16 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Station 1</title>
+<title><p>Station 1</p></title>
+
+<div>
+<img src="./assets/image/railway-thumbnail.png">
+<p><b>TechTrainの使い方</b></p>
+<p>TechBowl</p>
+<span>Suguru Ohki</span>
+<p>6,722回視聴・2021/04/22</p>
+
+</div>
 </head>
 <body>
 </body>
