--- a/src/station8.html
+++ b/src/station8.html
@@ -1,1 +1,32 @@
-<!doctype html>
+<!doctype html><!doctype html>
+<html lang="ja">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta property="og:title" content="ページのタイトル" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="ページのURL" />
+    <meta property="og:image" content="画像のURL" />
+
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:creator" content="@nickbilton" />
+
+    <link rel="stylesheet" href="./assets/css/station8.css" type="text/css">
+    <title>Station</title>
+  </head>
+  <body>
+    <header class="container">
+      <div class="card">
+        <img src="./assets/image/railway-thumbnail.png" class="card" alt="機械の画像" />
+        <p class="card">タイトル</p>
+      </div>
+    </header>
+    <footer>
+      <p class="card__description">Joseph Solomon</p>
+      <p class="card__description">420 mil visualizações • há 1 ano</p>
+    </footer>
+  </body>
+</html>
+ 
