--- a/src/station9.html
+++ b/src/station9.html
@@ -1,1 +1,33 @@
-<!doctype html>
+<!doctype html><!doctype html>
+<html lang="ja">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta property="og:title" content="ページのタイトル" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="ページのURL" />
+    <meta property="og:image" content="画像のURL" />
+
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:creator" content="@nickbilton" />
+
+    <link rel="stylesheet" href="./assets/css/station9.css" type="text/css">
+    <title>Station</title>
+  </head>
+  <body>
+    <header class="container">
+      <div class="card">
+      <img src="./assets/image/railway-thumbnail.png" class="card" alt="機械の画像" />
+        <p class="card__title">TechTrainの使い方</p>
+        <p class="card__subtitle">TechBowl</p>
+        <footer>
+          <p class="card__description">Suguru Ohki</p>
+          <p class="card__stats">6,722 回視聴・2021/04/22</p>
+        </footer>
+      </div>
+    </header>
+  </body>
+</html>
+ 
